chore: update Content Security Policy and enhance dashboard metadata
- Modified Content Security Policy to allow scripts from Cloudflare Insights, improving analytics capabilities.
- Added mobile web app capability meta tags in the dashboard HTML for better mobile experience.

--- a/packages/dashboard/index.html
+++ b/packages/dashboard/index.html
@@ -40,6 +40,7 @@
     <meta name="theme-color" content="#6366f1" />
     <meta name="msapplication-TileColor" content="#6366f1" />
     <meta name="msapplication-TileImage" content="/assets/dismodularjs.png" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="DisModular.js" />
